[Fix] Расставлены z-index

--- a/src/components/modal-overlay/modal-overlay.module.css
+++ b/src/components/modal-overlay/modal-overlay.module.css
@@ -10,5 +10,5 @@
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
-  z-index: 999;
+  z-index: 99;
 }
