--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -8,6 +8,7 @@
   align-items: center;
   background-color: var(--background);
   opacity: 1;
+  z-index: 199;
 }
 
 .header {
